--- a/Python/templates/shop.html
+++ b/Python/templates/shop.html
@@ -54,22 +54,27 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-        <div class="row">
-          {% for item in data %}
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="/item.html?type={{ item[0] }}&price={{ item[1] }}&desc={{ item[2] }}&id={{ item[3] }}"><img class="card-img-top" src="static/images/items/{{ item[3] }}.png" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="/item.html?type={{ item[0] }}&price={{ item[1] }}&desc={{ item[2] }}&id={{ item[3] }}">
-                    {{ item[0] }}</a>
-                </h4>
-                <h5>${{ item[1] }}</h5>
-                <p class="card-text">{{ item[2] }}</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-              </div>
+
+            <div class="row">
+                {% for item in data %}
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100">
+                        <a href="/item.html"><img class="card-img-top" src="static/images/items/{{ item[3] }}.png"
+                                                  alt=""></a>
+                        <div class="card-body">
+                            <h4 class="card-title">
+                                <a href="/item.html?type={{ item[0] }}&price={{ item[1] }}&desc={{ item[2] }}&id={{ item[3] }}">
+                                    {{ item[0] }}</a>
+                            </h4>
+                            <h5>${{ item[1] }}</h5>
+                            <p class="card-text">{{ item[2] }}</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
             </div>
             <!-- /.row -->
 
