--- a/Python/templates/checkout.html
+++ b/Python/templates/checkout.html
@@ -282,9 +282,9 @@
                 </div>
                 <hr class="mb-4">
                 {% if quantity == 0 %}
-                <a href="thankyou.html" class="btn btn-primary btn-lg btn-block">Continue to Checkout</a>
+                <button type="submit" name="checkout" class="btn btn-primary btn-lg btn-block">Continue to Checkout</button>
                 {% else %}
-                <a href="thankyou.html" class="btn btn-primary btn-lg btn-block">Continue to Checkout</a>
+                <button type="submit" name="checkout" class="btn btn-primary btn-lg btn-block">Continue to Checkout</button>
                 {% endif %}
             </form>
         </div>
