--- a/Python/templates/history.html
+++ b/Python/templates/history.html
@@ -37,9 +37,12 @@
                             <p class="card-text">${{ value[4] * value[6] }}</p>
                         </div>
                         <div class="float-right">
-                            <button type="button" class="btn btn-primary">Buy it Again</button>
-                            <button type="button" class="btn btn-secondary" href="#reviewModal" class="btn btn-success" data-toggle="modal" data-target="#reviewModal">Leave a Review</button>
-                            <button type="button" class="btn btn-danger" href="#reviewModal" class="btn btn-success" data-toggle="modal" data-target="#returnModal">Return Item</button>
+                            <form method="POST" action="">
+                            <input type="hidden" name="itemid" value={{ value[2] }}>
+                            <input type="submit" class="btn btn-primary" name="cart" value="Buy it Again">
+                            <button type="submit" class="btn btn-secondary" href="#reviewModal" class="btn btn-success" data-toggle="modal" data-target="#reviewModal">Leave a Review</button>
+                            <button type="submit" class="btn btn-danger" href="#reviewModal" class="btn btn-success" data-toggle="modal" data-target="#returnModal">Return Item</button>
+                            </form>
                         </div>
                         <div class="clearfix"></div>
                     </div>
