Updated Macros to fix navbar
-Icon now links back to home page

--- a/Python/templates/macros.html
+++ b/Python/templates/macros.html
@@ -1,7 +1,7 @@
 {% macro nav(active) %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
             <img src="/static/images/favicon.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
             Clothing
         </a>
