Changes to data base (bcnfing)

--- a/Python/templates/profile.html
+++ b/Python/templates/profile.html
@@ -7,8 +7,7 @@
 
     <section class="jumbotron text-center">
         <div class="container">
-            <h1 class="jumbotron-heading">{{ name[0] }}</h1>
-            <img src="static/images/thanos.jpg" class="rounded-circle" alt="Cinque Terre" width="296" height="236">
+            <h1 class="jumbotron-heading">{{ name[0][0] }}</h1>
         </div>
     </section>
 
