--- a/Python/templates/checkout.html
+++ b/Python/templates/checkout.html
@@ -25,7 +25,7 @@
                 <p>
                   <form method="POST">
                   <input type="hidden" name="itemid" value={{ item[4] }}>
-                  {% if addbtn %}
+                  {% if item[1] < item[5] %}
                     <button type="submit" class="btn btn-primary" name="add">+</button>
                   {% else %}
                     <button type="submit" class="btn btn-secondary" name="add" disabled>+</button>
@@ -94,15 +94,6 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="email">Email <span class="text-muted">(Optional)</span></label>
-                    <input type="email" class="form-control" id="email" placeholder="you@example.com" name="email"
-                           value="{{ request.form.email }}" required>
-                    <div class="invalid-feedback">
-                        Please enter a valid email address for shipping updates.
-                    </div>
-                </div>
-
-                <div class="mb-3">
                     <label for="address">Address</label>
                     <input type="text" class="form-control" id="address" placeholder="1234 Main St" name="address"
                            value="{{ request.form.address }}" required>
@@ -151,16 +142,7 @@
                     </div>
                 </div>
                 <hr class="mb-4">
-                <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="same-address">
-                    <label class="custom-control-label" for="same-address">Shipping address is the same as my billing
-                        address</label>
-                </div>
-                <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="save-info">
-                    <label class="custom-control-label" for="save-info">Save this information for next time</label>
-                </div>
-                <hr class="mb-4">
+
                 <h4 class="mb-3">Shipping address</h4>
                 <div class="row">
                     <div class="col-md-6 mb-3">
@@ -178,6 +160,15 @@
                         <div class="invalid-feedback">
                             Valid last name is required.
                         </div>
+                    </div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="email">Email</label>
+                    <input type="email" class="form-control" id="email" placeholder="you@example.com" name="email"
+                           value="{{ request.form.email }}" required>
+                    <div class="invalid-feedback">
+                        Please enter a valid email address for shipping updates.
                     </div>
                 </div>
 
