Macro Update and footer fix
-Removed footers from trouble pages
-Added pending orders tab to macros

--- a/Python/templates/thankyou.html
+++ b/Python/templates/thankyou.html
@@ -5,22 +5,22 @@
 <div class="container">
     <h2>Thank you for shopping with RTG Clothing!</h2>
     <h5>Your order details are below.</h5>
-    <p class="text-muted">Order {{ orderid }}</p>
+    <p class="text-muted">Order# {{ orderid }}</p>
 
     <div class="spacer"></div>
 
     <div class="row">
         <div class="col-4">
-          <strong>Name</strong>
+            <strong>Name</strong>
         </div>
         <div class="col-4">
-          <strong>Description</strong>
+            <strong>Description</strong>
         </div>
         <div class="col-2">
-          <strong>Quantity</strong>
+            <strong>Quantity</strong>
         </div>
         <div class="col-2">
-          <strong>Price</strong>
+            <strong>Price</strong>
         </div>
 
     </div>
@@ -44,18 +44,32 @@
     </div>
     <hr>
     {% endfor %}
+    <div class="row">
+        <div class="col-10">
+
+        </div>
+        <div class="col-2">
+            <div class="float-left">
+                <h6>Total: &nbsp;</h6>
+            </div>
+            <div class="float-left">
+                <p>Priceless^2</p>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
 
     <div class="row">
         <div class="col-10">
-             <a href="shop.html" class="btn btn-primary">Return to Shop</a>
+            <a href="shop.html" class="btn btn-primary">Return to Shop</a>
         </div>
     </div>
 </div>
 
 <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Raymond Huang, Gurpreeth Singh, Tenzin Loden 2019</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Raymond Huang, Gurpreeth Singh, Tenzin Loden 2019</p>
     </div>
     <!-- /.container -->
-  </footer>
+</footer>
 {% endblock content %}
