--- a/Python/templates/macros.html
+++ b/Python/templates/macros.html
@@ -21,6 +21,9 @@
                 <li>
                     <a class="nav-item nav-link" href="/returns.html">Returns</a>
                 </li>
+                <li>
+                    <a class="nav-item nav-link" href="/pendingorder.html">Orders</a>
+                </li>
             </ul>
             {% elif active == 'shop' %}
             <ul class="navbar-nav">
@@ -35,6 +38,9 @@
                 </li>
                 <li>
                     <a class="nav-item nav-link" href="/returns.html">Returns</a>
+                </li>
+                <li>
+                    <a class="nav-item nav-link" href="/pendingorder.html">Orders</a>
                 </li>
             </ul>
             {% elif active == 'shoppingcart' %}
@@ -51,6 +57,9 @@
                 <li>
                     <a class="nav-item nav-link" href="/returns.html">Returns</a>
                 </li>
+                <li>
+                    <a class="nav-item nav-link" href="/pendingorder.html">Orders</a>
+                </li>
             </ul>
             {% elif active == 'returns' %}
             <ul class="navbar-nav">
@@ -66,6 +75,27 @@
                 <li>
                     <a class="nav-item nav-link active" href="/returns.html">Returns</a>
                 </li>
+                <li>
+                    <a class="nav-item nav-link" href="/pendingorder.html">Orders</a>
+                </li>
+            </ul>
+            {% elif active == 'orders' %}
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-item nav-link" href="/">Home</a>
+                </li>
+                <li>
+                    <a class="nav-item nav-link" href="/shop.html">Shop</a>
+                </li>
+                <li>
+                    <a class="nav-item nav-link" href="/checkout.html">Shopping Cart</a>
+                </li>
+                <li>
+                    <a class="nav-item nav-link" href="/returns.html">Returns</a>
+                </li>
+                <li>
+                    <a class="nav-item nav-link active" href="/pendingorder.html">Orders</a>
+                </li>
             </ul>
             {% else %}
             <ul class="navbar-nav">
@@ -80,6 +110,9 @@
                 </li>
                 <li>
                     <a class="nav-item nav-link" href="/returns.html">Returns</a>
+                </li>
+                <li>
+                    <a class="nav-item nav-link" href="/pendingorder.html">Orders</a>
                 </li>
             </ul>
             {% endif %}
