--- a/Python/templates/pendingorder.html
+++ b/Python/templates/pendingorder.html
@@ -1,46 +1,48 @@
 {% extends "layouts.html" %}
 {% from "macros.html" import nav with context %}
 {% block content %}
-{{ nav('') }}
+{{ nav('orders') }}
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <h1 class="display-4">Pending Orders</h1>
     </div>
 </div>
 
-<div class="container">
-    <div class="card">
-        <div class="row no-gutters">
+<div class="flex-box">
+    <div class="container">
+        <div class="card">
+            <div class="row no-gutters">
 
-            <div class="col">
-                <div class="card-block px-2" style="height:150px;">
-                    <div class="float-left">
-                        <h3>Order #1234567890</h3>
+                <div class="col">
+                    <div class="card-block px-2" style="height:150px;">
+                        <div class="float-left">
+                            <h3>Order #1234567890</h3>
+                        </div>
+                        <div class="float-right">
+                            <a href="#" style="margin-right:5px; margin-top:1rem;" class="btn btn-danger float-right"
+                               data-toggle="modal" data-target="#orderModal">Review</a>
+                        </div>
+                        <div class="clearfix"></div>
+                        <small class="text-muted">Ordered by Raymond on 3/1/17</small>
                     </div>
-                    <div class="float-right">
-                        <a href="#" style="margin-right:5px; margin-top:1rem;" class="btn btn-danger float-right"
-                           data-toggle="modal" data-target="#orderModal">Review</a>
-                    </div>
-                    <div class="clearfix"></div>
-                    <small class="text-muted">Ordered by Raymond on 3/1/17</small>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="card">
-        <div class="row no-gutters">
+        <div class="card">
+            <div class="row no-gutters">
 
-            <div class="col">
-                <div class="card-block px-2" style="height:150px;">
-                    <div class="float-left">
-                        <h3>Order #1234567890</h3>
+                <div class="col">
+                    <div class="card-block px-2" style="height:150px;">
+                        <div class="float-left">
+                            <h3>Order #1234567890</h3>
+                        </div>
+                        <div class="float-right">
+                            <a href="#" style="margin-right:5px; margin-top:1rem;" class="btn btn-danger float-right"
+                               data-toggle="modal" data-target="#orderModal">Review</a>
+                        </div>
+                        <div class="clearfix"></div>
+                        <small class="text-muted">Ordered by Raymond on 3/1/17</small>
                     </div>
-                    <div class="float-right">
-                        <a href="#" style="margin-right:5px; margin-top:1rem;" class="btn btn-danger float-right"
-                           data-toggle="modal" data-target="#orderModal">Review</a>
-                    </div>
-                    <div class="clearfix"></div>
-                    <small class="text-muted">Ordered by Raymond on 3/1/17</small>
                 </div>
             </div>
         </div>
@@ -148,11 +150,4 @@
     </div>
 </div>
 
-
-<footer class="py-5 bg-dark">
-    <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Raymond Huang, Gurpreeth Singh, Tenzin Loden 2019</p>
-    </div>
-    <!-- /.container -->
-</footer>
 {% endblock content %}
