Completed adding/deleting cards transactions and selecting card in checkout

--- a/Python/templates/checkout.html
+++ b/Python/templates/checkout.html
@@ -114,7 +114,7 @@
                         <select class="custom-select d-block w-100" id="country" name="country"
                                 value="{{ request.form.country }}" required>
                             <option name="country">United States</option>
-                            <option>United States</option>
+                            <option>Canada</option>
                         </select>
                         <div class="invalid-feedback">
                             Please select a valid country.
@@ -124,7 +124,7 @@
                         <label for="state">State</label>
                         <select class="custom-select d-block w-100" id="state" name="state"
                                 value="{{ request.form.state }}" required>
-                            <option name="state">New York</option>
+                            <option name="state">Alaska</option>
                             <option>California</option>
                             <option>New York</option>
                         </select>
@@ -193,7 +193,7 @@
                         <select class="custom-select d-block w-100" id="country1" name="countryShip"
                                 value="{{ request.form.countryShip }}" required>
                             <option name="country">United States</option>
-                            <option>United States</option>
+                            <option>Canada</option>
                         </select>
                         <div class="invalid-feedback">
                             Please select a valid country.
@@ -203,7 +203,7 @@
                         <label for="state1">State</label>
                         <select class="custom-select d-block w-100" id="state1" name="stateShip"
                                 value="{{ request.form.stateShip }}" required>
-                            <option name="state">New York</option>
+                            <option name="state">Alaska</option>
                             <option>California</option>
                             <option>New York</option>
                         </select>
@@ -231,6 +231,55 @@
                 </div>
                 <div class="clearfix"></div>
 
+                {% if cardvalues[0] != None %}
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <label for="cc-name">Name on card</label>
+                        <input type="text" class="form-control" id="cc-name" placeholder="" name="cardName"
+                               value="{{ cardvalues[0] }}" required>
+                        <small class="text-muted">Full name as displayed on card</small>
+                        <div class="invalid-feedback">
+                            Name on card is required
+                        </div>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <label for="cc-number">Credit card number</label>
+                        <input type="text" class="form-control" id="cc-number" placeholder="" name="cardNum"
+                               value="{{ cardvalues[1] }}" required>
+                        <div class="invalid-feedback">
+                            Credit card number is required
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 mb-3">
+                        <label for="cc-expiration">Expiration</label>
+                        <input type="expirationDate" class="form-control" id="cc-expiration" name="expiration"
+                               placeholder="" type="text" value="{{ request.form.expiration }}" required/>
+                        <div class="invalid-feedback">
+                            Expiration date required
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <label for="cc-cvv">CVV</label>
+                        <input type="text" class="form-control" id="cc-cvv" placeholder="" name="cardCVV"
+                               value="{{ request.form.cardCVV }}" required>
+                        <div class="invalid-feedback">
+                            Security code required
+                        </div>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <label for="type">Card Type</label>
+                        <select class="custom-select d-block w-100" id="type" name="cardType"
+                                value="{{ cardvalues[3] }}" required>
+                            <option value="">Choose...</option>
+                            <option>Visa</option>
+                            <option>Discover</option>
+                            <option>MasterCard</option>
+                        </select>
+                    </div>
+                </div>
+                {% else %}
                 <div class="row">
                     <div class="col-md-6 mb-3">
                         <label for="cc-name">Name on card</label>
@@ -278,6 +327,7 @@
                         </select>
                     </div>
                 </div>
+                {% endif %}
                 <hr class="mb-4">
                 {% if quantity == 0 %}
                     <button class="btn btn-secondary btn-lg btn-block" type="submit" name="checkout" disabled>Continue to Checkout</button>
@@ -367,44 +417,25 @@
             <div class="modal-body">
                 <div class="container">
                     <div class="row">
+                    {% if cards != None %}
+                        {% for item in cards %}
                         <div class="col-md-6">
                             <div class="card mb-4" style="width: 18rem;">
                                 <div class="card-body">
-                                    <h5 class="card-title">Discover ending in 9999</h5>
-                                    <p class="card-text">Thanos Purpleman</br>Expires 12/12</p>
-                                    <button type="button" class="btn btn-primary">Select Card</button>
+                                    <form method="POST">
+                                        <h5 class="card-title">{{ item[3] }} - {{ item[2] }}</h5>
+                                        <p class="card-text">{{ item[1] }}<br>Expires {{ item[4] }}</p>
+                                        <input type="hidden" name="selectedcardname" value={{ item[1] }}>
+                                        <input type="hidden" name="selectedcardnum" value={{ item[2] }}>
+                                        <input type="hidden" name="selectedcardcomp" value={{ item[3] }}>
+                                        <input type="hidden" name="selectedcardexp" value={{ item[4] }}>
+                                        <button type="submit" class="btn btn-primary" name="cardselect">Select Card</button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="card mb-4" style="width: 18rem;">
-                                <div class="card-body">
-                                    <h5 class="card-title">Visa ending in 1111</h5>
-                                    <p class="card-text">Thanos Purpleman</br>Expires 10/10</p>
-                                    <button type="button" class="btn btn-primary">Select Card</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="card mb-4" style="width: 18rem;">
-                                <div class="card-body">
-                                    <h5 class="card-title">Discover ending in 9999</h5>
-                                    <p class="card-text">Thanos Purpleman</br>Expires 12/12</p>
-                                    <button type="button" class="btn btn-primary">Select Card</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="card mb-4" style="width: 18rem;">
-                                <div class="card-body">
-                                    <h5 class="card-title">Visa ending in 1111</h5>
-                                    <p class="card-text">Thanos Purpleman</br>Expires 10/10</p>
-                                    <button type="button" class="btn btn-primary">Select Card</button>
-                                </div>
-                            </div>
-                        </div>
+                        {% endfor %}
+                    {% endif %}
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -422,42 +453,6 @@
     </div>
     <!-- /.container -->
 </footer>
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')
-
-
-
-
-
-</script>
-<script src="../../assets/js/vendor/popper.min.js"></script>
-<script src="../../dist/js/bootstrap.min.js"></script>
-<script src="../../assets/js/vendor/holder.min.js"></script>
-<script>
-      // Example starter JavaScript for disabling form submissions if there are invalid fields
-      (function() {
-        'use strict';
-
-        window.addEventListener('load', function() {
-          // Fetch all the forms we want to apply custom Bootstrap validation styles to
-          var forms = document.getElementsByClassName('needs-validation');
-
-          // Loop over them and prevent submission
-          var validation = Array.prototype.filter.call(forms, function(form) {
-            form.addEventListener('submit', function(event) {
-              if (form.checkValidity() === false) {
-                event.preventDefault();
-                event.stopPropagation();
-              }
-              form.classList.add('was-validated');
-            }, false);
-          });
-        }, false);
-      })();
-</script>
 {% endblock content %}
 
 
