--- a/Python/templates/layouts.html
+++ b/Python/templates/layouts.html
@@ -78,5 +78,13 @@
             });
 
 </script>
+<script>
+       $(document).ready(function(){
+           $('.modal').on('hidden.bs.modal', function(e)
+           {
+               $(this).removeData();
+           }
+        });
+</script>
 </body>
 </html>
