--- a/Python/templates/history.html
+++ b/Python/templates/history.html
@@ -59,10 +59,18 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-            <form method="POST" action="">
+            <form class="rating" method="POST" action="">
                 <div class="modal-body">
                 <div class="form-group">
+                      <fieldset class="rating">
+                        <input type="radio" id="star5" name="rating" value="5" /><label class = "full" for="star5" title="Awesome - 5 stars"></label>
+                        <input type="radio" id="star4" name="rating" value="4" /><label class = "full" for="star4" title="Pretty good - 4 stars"></label>
+                        <input type="radio" id="star3" name="rating" value="3" /><label class = "full" for="star3" title="Meh - 3 stars"></label>
+                        <input type="radio" id="star2" name="rating" value="2" /><label class = "full" for="star2" title="Kinda bad - 2 stars"></label>
+                        <input type="radio" id="star1" name="rating" value="1" /><label class = "full" for="star1" title="Sucks big time - 1 star"></label>
+                    </fieldset>
                     <textarea class="form-control" id="reviewArea" rows="5" placeholder="Review Here" name="review" value="{{ request.form.review }}"></textarea>
+                    <input type="hidden" name="itemids" value={{ value[2] }}>
                   </div>
                 </div>
                   <div class="modal-footer">
@@ -85,10 +93,6 @@
           </div>
         <form method="POST" action="/history.html">
             <div class="modal-body">
-                <div class="form-group">
-                    <label for="quantity">Quantity</label>
-                    <input type="quantity" class="form-control" id="quantity" aria-describedby="emailHelp" name="quantity" value="{{ request.form.quantity }}">
-                </div>
                 <div class="form-group">
                     <label for="description">Why are you returning this item?</label>
                     <textarea class="form-control" id="description" rows="5" placeholder = "Description" name="comments" value="{{ request.form.comments }}"></textarea>
